# LinuxEQ

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: ReadVersion.cmake
include/: main.h
include/utilities/: version.h
src/: main.cpp
